--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install "nbqa[toolchain]" pylint isort "black[jupyter]" mypy pyupgrade
+          pip install "nbqa[toolchain]" pylint isort "black[jupyter]" mypy pyupgrade flake8-variables-names pep8-naming flake8-functions-names
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: pyupgrade
         run: |
@@ -45,6 +45,10 @@ jobs:
         run: |
           pylint --max-line-length=79 --const-naming-style=any --disable=E0401,W1514,C0200 --disable=import-error  $(git ls-files '*.py')
           nbqa pylint --max-line-length=79 --const-naming-style=any --disable=E0401,W1514,C0200 --disable=import-error $(git ls-files '*.ipynb')
+      - name: Flake8
+        run: |
+          flake8 $(git ls-files '*.py')    
+          nbqa flake8 $(git ls-files '*.ipynb')    
       - name: isort
         run: |
           isort --check-only --diff $(git ls-files '*.py')
