--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -43,8 +43,8 @@ jobs:
           nbqa pyupgrade $(git ls-files '*.ipynb')
       - name: Flake8
         run: |
-          flake8 --ignore=E203,E501 $(git ls-files '*.py')    
-          nbqa flake8 --ignore=E203,E501 $(git ls-files '*.ipynb')    
+          flake8 --ignore=E203,E501,W291,F821,F401 $(git ls-files '*.py')    
+          nbqa flake8 --ignore=E203,E501,W291,F821,F401 $(git ls-files '*.ipynb')    
       - name: Pylint
         run: |
           pylint --max-line-length=79 --const-naming-style=any --disable=E0401,W1514,C0200 --disable=import-error  $(git ls-files '*.py')
